<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/pos_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:textSize="15sp"
        android:text="@string/history_location" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rec_blue"
        android:layout_toEndOf="@+id/pos_name">

        <TextView
            android:id="@+id/lat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/latitude"
            android:textSize="11sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/lat_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/lat_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="latitude"
            app:layout_constraintBaseline_toBaselineOf="@id/lat"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lat" />

        <TextView
            android:id="@+id/lon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/longitude"
            android:textSize="11sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/lon_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lat" />

        <TextView
            android:id="@+id/lon_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:autofillHints="longitude"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lon"
            app:layout_constraintTop_toBottomOf="@+id/lat_text" />




    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>

