<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="clickListener"
            type="com.android.nfc.system.ui.MainActivity.ClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            app:layout_constraintBottom_toTopOf="@+id/history_lin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/longi"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/longitude"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/lon_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/lon_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="latitude"
                android:hint="@string/_15_478551"
                android:inputType="numberDecimal"
                app:layout_constraintBaseline_toBaselineOf="@id/longi"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/longi" />

            <TextView
                android:id="@+id/lati"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/latitude"
                android:textSize="20sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/lat_edit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/longi" />

            <EditText
                android:id="@+id/lat_edit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:autofillHints="longitude"
                android:hint="@string/_15_478551"
                android:inputType="numberDecimal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/lati"
                app:layout_constraintTop_toBottomOf="@+id/lon_edit" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/lat_edit">

                <Button
                    android:id="@+id/btn_map"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="65dp"
                    android:background="@color/lightseagreen"
                    android:onClick="@{()->clickListener.onMapClick()}"
                    android:text="@string/choose_position" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="65dp"
                    android:gravity="right">

                    <Button
                        android:id="@+id/btn_teleport"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/lightseagreen"
                        android:onClick="@{()->clickListener.onTeleportClick()}"
                        android:text="@string/teleport" />
                </LinearLayout>


            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/history_lin"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/chartreuse"
                android:gravity="center"
                android:text="@string/history_tele_location"
                android:textColor="@color/purple"
                android:textSize="25sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white_pressed"
            android:onClick="@{()->clickListener.onUpdateClick()}"
            android:text="@string/check_update"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>